--- a/cmsc320-etymology-project.ipynb
+++ b/cmsc320-etymology-project.ipynb
@@ -4,20 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Team Members (Name    UID):**\n",
+    "# **Explorations in Etymology: Data Analysis and Prediction**\n",
+    "## Fall 2024 Data Science Project\n",
+    "*George Mills; Azhan Zafar; Elizabeth Casey; Aybars Kocoglu; Connor Owens; Maximilian Hollis*\n",
+    "\n",
+    "# Contributions\n",
+    "A: Project idea\n",
+    "\tEveryone contributed to selecting the project idea.\n",
+    "\n",
+    "B: Dataset Curation and Preprocessing\n",
+    "\tElizabeth found the etymology dataset and Aybars found the word frequency dataset. Aybars worked on the preprocessing of these datasets. \n",
+    "\n",
+    "C: Data Exploration and Summary Statistics\n",
+    "\tAybars and Azhan worked on testing and creating visualizations for Hypothesis 1, Connor and Elizabeth worked on testing and creating visualizations for Hypothesis 2, and George and Max worked on testing and creating visualizations for Hypothesis 3. \n",
+    "\n",
+    "D: ML Algorithm Design/Development\n",
+    "\tAybars developed and trained the basic models for K-Fold Cross Validation, the FNN, and the RNN and created rudimentary encodings for the training and test data.\n",
+    "\n",
+    "E: ML Algorithm Training and Test Data Analysis\n",
+    "\tAzhan and George worked on optimizing results by modifying input data.\n",
+    "\n",
+    "F: Visualization, Result Analysis, Conclusion\n",
+    "\tMax worked on visualizing the results of the ML analysis. \n",
+    "\t\n",
+    "\n",
+    "G: Final Tutorial Report Creation\n",
+    "\tConnor and Elizabeth wrote up and formatted the tutorial and Max hosted the site on GitHub.\n",
     "\n",
     "\n",
-    "George Mills 118089287\n",
-    "\n",
-    "Azhan Zafar  118896731\n",
-    "\n",
-    "Elizabeth Casey 117967791\n",
-    "\n",
-    "Aybars Kocoglu 119880135\n",
-    "\n",
-    "Connor Owens 118019758\n",
-    "\n",
-    "Maximilian Hollis 118983233"
+    "\n"
    ]
   },
   {
