--- a/cmsc320-etymology-project.ipynb
+++ b/cmsc320-etymology-project.ipynb
@@ -25,7 +25,7 @@
     "\tAzhan and George worked on optimizing results by modifying input data.\n",
     "\n",
     "F: Visualization, Result Analysis, Conclusion\n",
-    "\tMax worked on visualizing the results of the ML analysis. \n",
+    "\tMax worked on visualizing the results of the ML analysis. Connor and Elizabeth analyzed the results and wrote the conclusion.\n",
     "\t\n",
     "\n",
     "G: Final Tutorial Report Creation\n",
