--- a/cmsc320-etymology-project.ipynb
+++ b/cmsc320-etymology-project.ipynb
@@ -9,27 +9,34 @@
     "*George Mills; Azhan Zafar; Elizabeth Casey; Aybars Kocoglu; Connor Owens; Maximilian Hollis*\n",
     "\n",
     "# Contributions\n",
-    "A: Project idea\n",
-    "\tEveryone contributed to selecting the project idea.\n",
+    "**A: Project idea**\n",
+    "\t\n",
+    "Everyone contributed to selecting the project idea.\n",
     "\n",
-    "B: Dataset Curation and Preprocessing\n",
-    "\tElizabeth found the etymology dataset and Aybars found the word frequency dataset. Aybars worked on the preprocessing of these datasets. \n",
+    "**B: Dataset Curation and Preprocessing**\n",
     "\n",
-    "C: Data Exploration and Summary Statistics\n",
-    "\tAybars and Azhan worked on testing and creating visualizations for Hypothesis 1, Connor and Elizabeth worked on testing and creating visualizations for Hypothesis 2, and George and Max worked on testing and creating visualizations for Hypothesis 3. \n",
+    "Elizabeth found the etymology dataset and Aybars found the word frequency dataset. Aybars worked on the preprocessing of these datasets. \n",
     "\n",
-    "D: ML Algorithm Design/Development\n",
-    "\tAybars developed and trained the basic models for K-Fold Cross Validation, the FNN, and the RNN and created rudimentary encodings for the training and test data.\n",
+    "**C: Data Exploration and Summary Statistics**\n",
     "\n",
-    "E: ML Algorithm Training and Test Data Analysis\n",
-    "\tAzhan and George worked on optimizing results by modifying input data.\n",
+    "Aybars and Azhan worked on testing and creating visualizations for Hypothesis 1, Connor and Elizabeth worked on testing and creating visualizations for Hypothesis 2, and George and Max worked on testing and creating visualizations for Hypothesis 3. \n",
     "\n",
-    "F: Visualization, Result Analysis, Conclusion\n",
-    "\tMax worked on visualizing the results of the ML analysis. Connor and Elizabeth analyzed the results and wrote the conclusion.\n",
+    "**D: ML Algorithm Design/Development**\n",
+    "\n",
+    "Aybars developed and trained the basic models for K-Fold Cross Validation, the FNN, and the RNN and created rudimentary encodings for the training and test data.\n",
+    "\n",
+    "**E: ML Algorithm Training and Test Data Analysis**\n",
+    "\n",
+    "Azhan and George worked on optimizing results by modifying input data.\n",
+    "\n",
+    "**F: Visualization, Result Analysis, Conclusion**\n",
+    "\n",
+    "Max worked on visualizing the results of the ML analysis. Connor and Elizabeth analyzed the results and wrote the conclusion.\n",
     "\t\n",
     "\n",
-    "G: Final Tutorial Report Creation\n",
-    "\tConnor and Elizabeth wrote up and formatted the tutorial and Max hosted the site on GitHub.\n",
+    "**G: Final Tutorial Report Creation**\n",
+    "\n",
+    "Connor and Elizabeth wrote up and formatted the tutorial and Max hosted the site on GitHub.\n",
     "\n",
     "\n",
     "\n"
